test/corpus/comments.txt
==================
Однострочный комментарий
==================

// это комментарий
42

---

(document
  (comment)
  (value
    (number)))

==================
Многострочный комментарий
==================

/* блок */
истина

---

(document
  (comment)
  (value
    (boolean)))

==================
Комментарий внутри объекта
==================

{ /* заметка */ key: "val" }

---

(document
  (value
    (object
      (comment)
      (pair
        key: (identifier)
        value: (value
          (string))))))

==================
Только комментарий
==================

// lone comment

---

(document
  (comment))
