test/corpus/primitives.txt
==================
Числа: целые и с плавающей точкой
==================

0
42
-1
3.14
0.5
100.0
1e4
2.5e-3

---

(document
  (value
    (number))
  (value
    (number))
  (value
    (number))
  (value
    (number))
  (value
    (number))
  (value
    (number))
  (value
    (number))
  (value
    (number)))

==================
Строки
==================

"hello"
""
"строка с пробелами"
"escaped \" quote"

---

(document
  (value
    (string))
  (value
    (string))
  (value
    (string))
  (value
    (string)))

==================
Булевы значения
==================

истина
ложь

---

(document
  (value
    (boolean))
  (value
    (boolean)))

==================
Null
==================

пусто

---

(document
  (value
    (null)))

==================
Даты
==================

2024-01-15
1990-05-21
2026-12-31

---

(document
  (value
    (date))
  (value
    (date))
  (value
    (date)))

==================
Длительности
==================

5д
3ч
30мин
10с
2г
3ч30мин
1д2ч30мин

---

(document
  (value
    (duration))
  (value
    (duration))
  (value
    (duration))
  (value
    (duration))
  (value
    (duration))
  (value
    (duration))
  (value
    (duration)))

==================
Идентификаторы
==================

foo
_bar
abc123
привет
camelCase
a

---

(document
  (value
    (identifier))
  (value
    (identifier))
  (value
    (identifier))
  (value
    (identifier))
  (value
    (identifier))
  (value
    (identifier)))
